lib_LIBRARIES = libsgp4.a
libsgp4_a_SOURCES = Tle.cpp \
			OrbitalElements.cpp \
			Observer.cpp \
			Timespan.cpp \
			Util.cpp \
			Eci.cpp \
			Julian.cpp \
			SGP4.cpp \
			SolarPosition.cpp
include_HEADERS = CoordGeodetic.h \
			Eci.h \
			Julian.h \
			OrbitalElements.h \
			SatelliteException.h \
			Timespan.h \
			TleException.h \
			Vector.h \
			CoordTopographic.h \
			Globals.h \
			Observer.h \
			SGP4.h \
			SolarPosition.h \
			Tle.h \
			Util.h
