lib_LIBRARIES = libsgp4.a
libsgp4_a_SOURCES = Tle.cpp \
			OrbitalElements.cpp \
			Observer.cpp \
			Util.cpp \
			Eci.cpp \
			SGP4.cpp \
			TimeSpan.cpp \
			DateTime.cpp
include_HEADERS = CoordGeodetic.h \
			Eci.h \
			OrbitalElements.h \
			SatelliteException.h \
			TleException.h \
			Vector.h \
			CoordTopographic.h \
			Globals.h \
			Observer.h \
			SGP4.h \
			Tle.h \
			Util.h \
			TimeSpan.h \
			DateTime.h
