lib_LIBRARIES = libsgp4.a
libsgp4_a_SOURCES = \
			CoordGeodetic.cpp \
			CoordTopocentric.cpp \
			DateTime.cpp \
			Eci.cpp \
			Globals.cpp \
			Observer.cpp \
			OrbitalElements.cpp \
			SGP4.cpp \
			TimeSpan.cpp \
			Tle.cpp \
			Util.cpp \
			Vector.cpp
include_HEADERS = CoordGeodetic.h \
			Eci.h \
			OrbitalElements.h \
			SatelliteException.h \
			TleException.h \
			Vector.h \
			CoordTopocentric.h \
			Globals.h \
			Observer.h \
			SGP4.h \
			Tle.h \
			Util.h \
			TimeSpan.h \
			DateTime.h
